--- a/css/styles.css
+++ b/css/styles.css
@@ -49,24 +49,28 @@ ul {
 
 /* шапка */
 
-.header {
-  background-color: var(--main-background-color);
-  border-bottom: 1px solid var(--header-bd-cl);
-}
-
 .container {
   margin-left: auto;
   margin-right: auto;
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.header {
+  background-color: var(--main-background-color);
+  border-bottom: 1px solid var(--header-bd-cl);
+  padding-top: 24px;
+  padding-bottom: 25px;
 }
 
 .main-nav {
   display: flex;
   align-items: center;
-  padding-top: 24px;
-  padding-bottom: 25px;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 .logo {
@@ -86,16 +90,13 @@ ul {
 .nav {
   display: flex;
   margin-left: 93px;
+  gap: 50px;
 }
 
 .contact {
   display: flex;
   margin-left: auto;
-}
-
-.nav .item:not(:last-child),
-.contact .item:not(:last-child) {
-  margin-right: 50px;
+  gap: 50px;
 }
 
 .site-nav .link {
@@ -132,6 +133,7 @@ ul {
 .hero {
   background-color: var(--dark-background-color);
   text-align: center;
+  padding: 200px 0;
 }
 .hero-title {
   color: var(--main-background-color);
@@ -160,18 +162,13 @@ ul {
 }
 
 /* benefits */
-.benefits.container {
-  padding-top: 94px;
-  padding-bottom: 94px;
+.work .container {
+  padding-top: 0;
 }
 
 .list.about {
   display: flex;
-  justify-content: space-between;
-}
-
-.about .item:not(:last-child) {
-  margin-right: 30px;
+  gap: 30 px;
 }
 
 .benefits-title {
@@ -201,20 +198,15 @@ ul {
   margin-bottom: 50px;
 }
 
-.list.katalogue {
+.katalogue {
   display: flex;
-  justify-content: space-between;
-  padding-bottom: 94px;
+  gap: 30px;
 }
 
 /* team */
-.list.employee {
+.employee {
   display: flex;
-  padding-bottom: 94px;
-}
-
-.employee .item:not(:last-child) {
-  margin-right: 30px;
+  gap: 30px;
 }
 
 .team {
@@ -229,7 +221,12 @@ ul {
   text-align: center;
   letter-spacing: 0.03em;
   margin-bottom: 50px;
-  padding-top: 94px;
+}
+
+.team .decription {
+  background-color: var(--main-background-color);
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .team-title {
@@ -239,8 +236,7 @@ ul {
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
-  padding-bottom: 10px;
-  padding-top: 30px;
+  margin-bottom: 10px;
   text-align: center;
 }
 
@@ -250,14 +246,17 @@ ul {
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
-  padding-bottom: 30px;
   text-align: center;
 }
 
 /* footer */
 .footer {
   background-color: var(--dark-background-color);
-  padding: 60px 0;
+}
+
+.footer .container {
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .footer .footer-link {
@@ -271,6 +270,9 @@ ul {
   display: block;
   margin-bottom: 20px;
 }
+.accent2 {
+  color: var(--main-background-color);
+}
 
 .footer .footer-addres {
   color: var(--addres-color);
@@ -278,6 +280,10 @@ ul {
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.03em;
+}
+
+.adress .item:not(:last-child) {
+  margin-bottom: 9px;
 }
 
 .footer-link:hover,
@@ -295,12 +301,8 @@ ul {
 .list.box {
   display: flex;
   justify-content: center;
-  padding-top: 94px;
+  gap: 8px;
   margin-bottom: 50px;
-}
-
-.box .element:not(:last-child) {
-  margin-right: 8px;
 }
 
 .filter-btn {
@@ -328,21 +330,11 @@ ul {
 .link-container {
   display: flex;
   flex-wrap: wrap;
-  padding-bottom: 94px;
+  gap: 30px;
 }
 
 .link-container .item {
   width: calc((100% - 60px) / 3);
-  margin-right: 30px;
-  margin-bottom: 30px;
-}
-
-.link-container .item:nth-child(3n) {
-  margin-right: 0;
-}
-
-.link-container .item:nth-last-child(-n + 3) {
-  margin-bottom: 0;
 }
 
 .portfolio-title {
@@ -351,13 +343,6 @@ ul {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
-  padding-left: 24px;
-  border-right-width: 1px;
-  border-right-style: solid;
-  border-right-color: var(--border-potfolio-cl);
-  border-left-width: 1px;
-  border-left-style: solid;
-  border-left-color: var(--border-potfolio-cl);
 }
 
 .portfolio-text {
@@ -365,14 +350,13 @@ ul {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.03em;
+}
+
+.link-container .decription {
   padding-left: 24px;
-  border-bottom-width: 1px;
-  border-bottom-style: solid;
-  border-bottom-color: var(--border-potfolio-cl);
-  border-right-width: 1px;
-  border-right-style: solid;
-  border-right-color: var(--border-potfolio-cl);
-  border-left-width: 1px;
-  border-left-style: solid;
-  border-left-color: var(--border-potfolio-cl);
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid var(--border-potfolio-cl);
+  border-right: 1px solid var(--border-potfolio-cl);
+  border-left: 1px solid var(--border-potfolio-cl);
 }
