--- a/css/styles.css
+++ b/css/styles.css
@@ -148,7 +148,6 @@ ul {
   line-height: 1.36;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  text-align: center;
   margin-bottom: 30px;
   width: 696px;
   margin-left: auto;
@@ -218,6 +217,11 @@ ul {
 .employee {
   display: flex;
   gap: 30px;
+}
+
+.employee .decription {
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
 }
 
 .team {
