--- a/css/styles.css
+++ b/css/styles.css
@@ -239,6 +239,7 @@ ul {
   padding-bottom: 30px;
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
+  
 }
 
 .team-title {
@@ -259,6 +260,13 @@ ul {
   line-height: 1.19;
   letter-spacing: 0.03em;
   text-align: center;
+}
+
+.employee .item {
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 3px 1px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 2px rgba(0, 0, 0, 0.20);
+
 }
 
 /* footer */
