--- a/css/styles.css
+++ b/css/styles.css
@@ -233,7 +233,7 @@ ul {
   margin-bottom: 50px;
 }
 
-.team .decription {
+.team .description {
   background-color: var(--main-background-color);
   padding-top: 30px;
   padding-bottom: 30px;
@@ -266,7 +266,6 @@ ul {
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 3px 1px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 2px rgba(0, 0, 0, 0.20);
-
 }
 
 /* footer */
@@ -370,7 +369,7 @@ ul {
   letter-spacing: 0.03em;
 }
 
-.link-container .decription {
+.link-container .description {
   padding-left: 24px;
   padding-top: 20px;
   padding-bottom: 20px;
@@ -378,3 +377,4 @@ ul {
   border-right: 1px solid var(--border-potfolio-cl);
   border-left: 1px solid var(--border-potfolio-cl);
 }
+
